some more informations about the next CyberLand and layout issues fixed

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -138,3 +138,7 @@ body > .content {
 	text-decoration: underline;
   }
 }
+
+.jug-logo {
+  height: 200px;
+}
